Move Development Dependencies, having native extensions, to the Gemfile so MRI vs. JRuby specific dependencies can be divided.

--- a/spec/db/database.sqlite3.yml
+++ b/spec/db/database.sqlite3.yml
@@ -1,17 +1,24 @@
+<%
+  db_adapter = 'sqlite3'
+
+  if defined?(RUBY_ENGINE)
+    db_adapter = 'jdbcsqlite3' if RUBY_ENGINE == 'jruby'
+  end
+%>
 operational_database:
-  adapter: sqlite3
+  adapter: <%= db_adapter %>
   database: operational_database.sqlite3
   pool: 5
   timeout: 5000
 
 data_warehouse:
-  adapter: sqlite3
+  adapter: <%= db_adapter %>
   database: data_warehouse.sqlite3
   pool: 5
   timeout: 5000
 
 etl_execution:
-  adapter: sqlite3
+  adapter: <%= db_adapter %>
   database: etl_execution.sqlite3
   pool: 5
   timeout: 5000
