Modified the sqlite database location. It now sits in './spec/db/' rather than at '.'

--- a/spec/db/database.sqlite3.yml
+++ b/spec/db/database.sqlite3.yml
@@ -4,21 +4,23 @@
   if defined?(RUBY_ENGINE)
     db_adapter = 'jdbcsqlite3' if RUBY_ENGINE == 'jruby'
   end
+
+  db_root = Bundler.root.join('spec/db/')
 %>
 operational_database:
   adapter: <%= db_adapter %>
-  database: operational_database.sqlite3
+  database: <%= db_root.join('operational_database.sqlite3').to_s %>
   pool: 5
   timeout: 5000
 
 data_warehouse:
   adapter: <%= db_adapter %>
-  database: data_warehouse.sqlite3
+  database: <%= db_root.join('data_warehouse.sqlite3').to_s %>
   pool: 5
   timeout: 5000
 
 etl_execution:
   adapter: <%= db_adapter %>
-  database: etl_execution.sqlite3
+  database: <%= db_root.join('etl_execution.sqlite3').to_s %>
   pool: 5
   timeout: 5000
