Try to use bundle exec - but I believe the DB is maybe not set yet

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ env:
   - DB=mysql
   - DB=postgresql
 before_script:
-  - rake db:create db:schema:load
+  - bundle exec rake db:create db:schema:load
