--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ env:
   - DB=mysql
   - DB=postgresql
 before_script:
-  - bundle exec rake db:create db:schema:load
+  - bundle exec rake db:create
+  - bundle exec rake db:schema:load
