Try to debug db creation. Works locally.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ env:
   - DB=mysql
   - DB=postgresql
 before_script:
-  - bundle exec rake db:create
+  - bundle exec rake show_me_this
+  - bundle exec rake db:create:all
   - bundle exec rake db:schema:load
