--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ env:
   - DB=mysql
   - DB=postgresql
 before_script:
-  - bundle exec rake db:create
+  - bundle exec rake db:create RAILS_ENV=$DB
   - bundle exec rake db:schema:load RAILS_ENV=$DB
