Use mysql for etl_execution db as AR 3.1 as issues with @logger nil on sqlite

--- a/test/config/database.yml
+++ b/test/config/database.yml
@@ -30,5 +30,5 @@ data_warehouse:
   <<: *<%= ENV['DB'] %>
 
 etl_execution:
-  adapter: sqlite3
-  database: ":memory:"
+  adapter: mysql
+  database: etl_execution
