--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ env:
   - DB=postgresql
 before_script:
   - bundle exec rake db:create RAILS_ENV=$DB
+  - bundle exec rake db:create RAILS_ENV=etl_execution
   - bundle exec rake db:schema:load RAILS_ENV=$DB
