Add preliminary support for Rails 4.0.x testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
 gemfile:
+  - test/config/gemfiles/Gemfile.rails-4.0.x
   - test/config/gemfiles/Gemfile.rails-3.2.x
   - test/config/gemfiles/Gemfile.rails-3.1.x
   - test/config/gemfiles/Gemfile.rails-3.0.x
